// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches collapsed snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 2rem 1rem;
  margin: 0;
  border-radius: 5px;
  background-color: var(--background-card);
}

.c0 {
  position: absolute;
  width: 100%;
  height: 100%;
  background: transparent;
}

.c0 .c1 {
  z-index: 1000;
  position: absolute;
  min-width: 400px;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  -webkit-transition: -webkit-transform 1s ease,top 1s ease,left 1s ease;
  -webkit-transition: transform 1s ease,top 1s ease,left 1s ease;
  transition: transform 1s ease,top 1s ease,left 1s ease;
  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);
}

<div
    class="c0"
  >
    <div
      class="c1 c2"
    />
  </div>
</DocumentFragment>
`;

exports[`matches snapshot 1`] = `
<DocumentFragment>
  .c2 {
  padding: 2rem 1rem;
  margin: 0;
  border-radius: 5px;
  background-color: var(--background-card);
}

.c0 {
  position: absolute;
  width: 100%;
  height: 100%;
  background: transparent;
}

.c0 .c1 {
  z-index: 1000;
  position: absolute;
  min-width: 400px;
  top: 10px;
  left: 10px;
  -webkit-transition: -webkit-transform 1s ease,top 1s ease,left 1s ease;
  -webkit-transition: transform 1s ease,top 1s ease,left 1s ease;
  transition: transform 1s ease,top 1s ease,left 1s ease;
  box-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2), 0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);
}

<div
    class="c0"
  >
    <div
      class="c1 c2"
    />
  </div>
</DocumentFragment>
`;
